# NLP_Chatbot

./: documentation.md  main.py  pyproject.toml
chat/: predictor.py  train_model.py  utils.py
