[tool.poetry]
name = "openfabric-test"
version = "1.1"
description = "cognitive-assistant"
authors = ["Andrei"]

[tool.poetry.dependencies]
python = "^3.8"
openfabric-pysdk = "0.1.11"
googletrans== "3.1.0a0"
nltk = "3.7"
datasets = "2.10.0"
transformers = "4.25.1"
spacy = "3.4.4"
tensorflow = "2.11.0"
farm-haystack = "1.13.2"
numpy = "1.23.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
